--- a/CCS Slider/index.html
+++ b/CCS Slider/index.html
@@ -9,24 +9,49 @@
 </head>
 
 <body>
-    <section class="container">
-        <div class="slider-wrapper">
-            <div class="slider">
-                <img id="slide-1" src="images/1.jpg" alt="cat">
-                <img id="slide-2" src="images/2.jpg" alt="cat">
-                <img id="slide-3" src="images/3.jpg" alt="cat">
-                <img id="slide-4" src="images/4.jpg" alt="cat">
+    <section class="wrapper">
+
+        <div class="slider middle">
+
+            <div class="slides">
+
+                <input type="radio" name="r" id="r1" class="slide-radio1" checked>
+                <input type="radio" name="r" id="r2" class="slide-radio2">
+                <input type="radio" name="r" id="r3" class="slide-radio3">
+                <input type="radio" name="r" id="r4" class="slide-radio4">
+
+                <div class="slide s1"><img src="images/1.jpg" alt="planet"></div>
+                <div class="slide"><img src="images/2.jpg" alt="planet"></div>
+                <div class="slide"><img src="images/3.jpg" alt="planet"></div>
+                <div class="slide"><img src="images/4.jpg" alt="planet"></div>
+
             </div>
-            <div>
+
+        </div>
+        <div class="slide__wrapper">
+            <div class="text slide1">
+                <p>Earth</p>
             </div>
-            <div class="slider-nav">
-                <a href="#slide-1"></a>
-                <a href="#slide-2"></a>
-                <a href="#slide-3"></a>
-                <a href="#slide-4"></a>
+            <div class="text slide2">
+                <p>Saturn</p>
+            </div>
+            <div class="text slide3">
+                <p>Moon</p>
+            </div>
+            <div class="text slide4">
+                <p>Neptune</p>
+            </div>
+            <div class="navigation">
+                <label for="r1" class="bar"></label>
+                <label for="r2" class="bar"></label>
+                <label for="r3" class="bar"></label>
+                <label for="r4" class="bar"></label>
             </div>
         </div>
+
+
     </section>
+
 </body>
 
 </html>
