feat: working slaider (11 sept, 20:58)
feat: working slaider (11 sept, 20:58)

--- a/CCS Slider/index.html
+++ b/CCS Slider/index.html
@@ -25,28 +25,28 @@
                 <div class="slide"><img src="images/3.jpg" alt="planet"></div>
                 <div class="slide"><img src="images/4.jpg" alt="planet"></div>
 
+                <div class="text slide1">
+                    Earth
+                </div>
+                <div class="text slide2">
+                    Saturn
+                </div>
+                <div class="text slide3">
+                    Moon
+                </div>
+                <div class="text slide4">
+                    Neptune
+                </div>
+
             </div>
 
         </div>
-        <div class="slide__wrapper">
-            <div class="text slide1">
-                <p>Earth</p>
-            </div>
-            <div class="text slide2">
-                <p>Saturn</p>
-            </div>
-            <div class="text slide3">
-                <p>Moon</p>
-            </div>
-            <div class="text slide4">
-                <p>Neptune</p>
-            </div>
-            <div class="navigation">
-                <label for="r1" class="bar"></label>
-                <label for="r2" class="bar"></label>
-                <label for="r3" class="bar"></label>
-                <label for="r4" class="bar"></label>
-            </div>
+        <div class="navigation">
+            <label for="r1" class="bar"></label>
+            <label for="r2" class="bar"></label>
+            <label for="r3" class="bar"></label>
+            <label for="r4" class="bar"></label>
+        </div>
         </div>
 
 
