refactor: change structure of the project
refactor: change structure of the project

--- a/CCS Slider/index.html
+++ b/CCS Slider/index.html
@@ -20,24 +20,23 @@
                 <input type="radio" name="r" id="r3" class="slide-radio3">
                 <input type="radio" name="r" id="r4" class="slide-radio4">
 
-                <div class="slide s1"><img src="images/1.jpg" alt="planet"></div>
-                <div class="slide"><img src="images/2.jpg" alt="planet"></div>
-                <div class="slide"><img src="images/3.jpg" alt="planet"></div>
-                <div class="slide"><img src="images/4.jpg" alt="planet"></div>
+                <div class="slide s1"><img src="images/11.png" alt="planet"></div>
+                <div class="slide"><img src="images/22.png" alt="planet"></div>
+                <div class="slide"><img src="images/33.png" alt="planet"></div>
+                <div class="slide"><img src="images/44.png" alt="planet"></div>
 
                 <div class="text slide1">
-                    Earth
+                    <p>HTML</p>
                 </div>
                 <div class="text slide2">
-                    Saturn
+                    <p>CSS</p>
                 </div>
                 <div class="text slide3">
-                    Moon
+                    <p>JS</p>
                 </div>
                 <div class="text slide4">
-                    Neptune
+                    <p>REACT</p>
                 </div>
-
             </div>
 
         </div>
