--- a/CCS Slider/index.html
+++ b/CCS Slider/index.html
@@ -20,10 +20,10 @@
                 <input type="radio" name="r" id="r3" class="slide-radio3">
                 <input type="radio" name="r" id="r4" class="slide-radio4">
 
-                <div class="slide s1"><img src="images/11.png" alt="planet"></div>
-                <div class="slide"><img src="images/22.png" alt="planet"></div>
-                <div class="slide"><img src="images/33.png" alt="planet"></div>
-                <div class="slide"><img src="images/44.png" alt="planet"></div>
+                <div class="slide s1"><img src="11.png" alt="planet"></div>
+                <div class="slide"><img src="22.png" alt="planet"></div>
+                <div class="slide"><img src="33.png" alt="planet"></div>
+                <div class="slide"><img src="44.png" alt="planet"></div>
 
                 <div class="text slide1">
                     <p>HTML</p>
