feat: working on pc (15 Sept, 18:02)
feat: working on pc (15 Sept, 18:02)

--- a/CCS Slider/index.html
+++ b/CCS Slider/index.html
@@ -15,16 +15,38 @@
 
             <div class="slides">
 
-                <input type="radio" name="r" id="r1" class="slide-radio1" checked>
+                <!-- <input type="radio" name="r" id="r1" class="slide-radio1" checked>
                 <input type="radio" name="r" id="r2" class="slide-radio2">
                 <input type="radio" name="r" id="r3" class="slide-radio3">
-                <input type="radio" name="r" id="r4" class="slide-radio4">
+                <input type="radio" name="r" id="r4" class="slide-radio4"> -->
 
                 <div class="slide s1"><img src="images/11.png" alt="planet"></div>
                 <div class="slide"><img src="images/22.png" alt="planet"></div>
                 <div class="slide"><img src="images/33.png" alt="planet"></div>
                 <div class="slide"><img src="images/44.png" alt="planet"></div>
 
+                <!-- <div class="text slide1">
+                    <p>HTML</p>
+                </div>
+                <div class="text slide2">
+                    <p>CSS</p>
+                </div>
+                <div class="text slide3">
+                    <p>JS</p>
+                </div>
+                <div class="text slide4">
+                    <p>REACT</p>
+                </div> -->
+            </div>
+
+        </div>
+
+        <div class="bot__container">
+            <div>
+                <input type="radio" name="r" id="r1" class="slide-radio1" checked>
+                <input type="radio" name="r" id="r2" class="slide-radio2">
+                <input type="radio" name="r" id="r3" class="slide-radio3">
+                <input type="radio" name="r" id="r4" class="slide-radio4">
                 <div class="text slide1">
                     <p>HTML</p>
                 </div>
@@ -38,14 +60,15 @@
                     <p>REACT</p>
                 </div>
             </div>
+            <div class="navigation">
+                <label for="r1" class="bar"></label>
+                <label for="r2" class="bar"></label>
+                <label for="r3" class="bar"></label>
+                <label for="r4" class="bar"></label>
+            </div>
+        </div>
 
-        </div>
-        <div class="navigation">
-            <label for="r1" class="bar"></label>
-            <label for="r2" class="bar"></label>
-            <label for="r3" class="bar"></label>
-            <label for="r4" class="bar"></label>
-        </div>
+
         </div>
 
 
