--- a/CCS Slider/index.html
+++ b/CCS Slider/index.html
@@ -10,47 +10,53 @@
 
 <body>
     <section class="wrapper">
-
-        <div class="slider middle">
-
+        <div class="slides__borders">
             <div class="slides">
+                <div class="slide"><img class="images" src="images/11.png" alt=""></div>
+                <div class="slide"><img class="images" src="images/22.png" alt=""></div>
+                <div class="slide"><img class="images" src="images/33.png" alt=""></div>
+                <div class="slide"><img class="images" src="images/44.png" alt=""></div>
+                <div class="slide"><img class="images" src="images/11.png" alt=""></div>
+            </div>
+        </div>
 
-                <input type="radio" name="r" id="r1" class="slide-radio1" checked>
-                <input type="radio" name="r" id="r2" class="slide-radio2">
-                <input type="radio" name="r" id="r3" class="slide-radio3">
-                <input type="radio" name="r" id="r4" class="slide-radio4">
-
-                <div class="slide s1"><img src="11.png" alt="planet"></div>
-                <div class="slide"><img src="22.png" alt="planet"></div>
-                <div class="slide"><img src="33.png" alt="planet"></div>
-                <div class="slide"><img src="44.png" alt="planet"></div>
-
-                <div class="text slide1">
-                    <p>HTML</p>
-                </div>
-                <div class="text slide2">
-                    <p>CSS</p>
-                </div>
-                <div class="text slide3">
-                    <p>JS</p>
-                </div>
-                <div class="text slide4">
-                    <p>REACT</p>
+        <div class="controlers-container">
+            <div class="text__borders">
+                <div class="text__wrapper">
+                    <p class="text">HTML</p>
+                    <p class="text">CSS</p>
+                    <p class="text">JS</p>
+                    <p class="text">REACT</p>
+                    <p class="text">IM BACK AGAIN! MY JOKES ARE BAD, I KNOW</p>
                 </div>
             </div>
 
+            <div class="navigation">
+                <div class="tabs">
+                    <input type="radio" id="r1" name="r" class="slide-radio1 slide__radio__btn" checked>
+                    <label class="slide__radio" for="r1"></label>
+                </div>
+                <div class="tabs">
+                    <input type="radio" id="r2" name="r" class="slide-radio2 slide__radio__btn">
+                    <label class="slide__radio" for="r2"></label>
+                </div>
+                <div class="tabs">
+                    <input type="radio" id="r3" name="r" class="slide-radio3 slide__radio__btn">
+                    <label class="slide__radio" for="r3"></label>
+                </div>
+                <div class="tabs">
+                    <input type="radio" id="r4" name="r" class="slide-radio4 slide__radio__btn">
+                    <label class="slide__radio" for="r4"></label>
+                </div>
+                <div class="tabs">
+                    <input type="radio" id="r5" name="r" class="slide-radio5 slide__radio__btn">
+                    <label class="slide__radio" for="r5"></label>
+                </div>
+            </div>
         </div>
-        <div class="navigation">
-            <label for="r1" class="bar"></label>
-            <label for="r2" class="bar"></label>
-            <label for="r3" class="bar"></label>
-            <label for="r4" class="bar"></label>
         </div>
         </div>
-
-
     </section>
-
 </body>
 
 </html>
