--- a/CCS Slider/index.html
+++ b/CCS Slider/index.html
@@ -12,11 +12,11 @@
     <section class="wrapper">
         <div class="slides__borders">
             <div class="slides">
-                <div class="slide"><img class="images" src="images/11.png" alt=""></div>
-                <div class="slide"><img class="images" src="images/22.png" alt=""></div>
-                <div class="slide"><img class="images" src="images/33.png" alt=""></div>
-                <div class="slide"><img class="images" src="images/44.png" alt=""></div>
-                <div class="slide"><img class="images" src="images/11.png" alt=""></div>
+                <div class="slide"><img class="images" src="11.png" alt=""></div>
+                <div class="slide"><img class="images" src="22.png" alt=""></div>
+                <div class="slide"><img class="images" src="33.png" alt=""></div>
+                <div class="slide"><img class="images" src="44.png" alt=""></div>
+                <div class="slide"><img class="images" src="11.png" alt=""></div>
             </div>
         </div>
 
